// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expense list with empty message 1`] = `
<div
  className="ExpenseList"
/>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="ExpenseList"
>
  <p>
    No expenses
  </p>
</div>
`;
